# extendify

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  biome.json  bun.nix  flake.nix  install.ps1  package.json  prettier.config.mjs  tsconfig.json
.github/workflows/: build.yml  build_mod.yml  build_native.yml
crates/android-notifier/: Cargo.toml  config.toml.example
crates/android-notifier/src/: cache.rs  config.rs  constants.rs  main.rs
crates/extendify-native/: wrapper.h
crates/web-notifier/: Cargo.toml
docs/: README.md
docs/develop/: README.md
docs/install/: README.md  chrome.md  linux.md  windows.md
lib/api/: context.ts  esperanto.ts  event.ts  experiment.ts  gql.ts  page.tsx  patch.ts  platform.ts  plugin.ts  react.ts  redux.ts  registry.ts  router.tsx  topbar.tsx
lib/components/: icons.ts  spotify.ts
lib/inject/: index.ts  react.ts
lib/shared/: constants.ts  lazy.ts  lazy.tsx  logger.ts  match.ts
lib/webpack/: exporter.ts  index.ts  interceptor.ts  loader.ts  module.ts  module.tsx  patcher.ts
nix/: cef.nix  fmt.nix  native.nix  package.nix  shell.nix  spotify-extendify.nix
scripts/: applyPatch.mjs  args.ts  build.ts  devtools.ts  manualUpdate.mjs  patch.ts  postinstall.ts  tsconfig.json  update.ts  utils.mjs  utils.ts
scripts/proc/: kill.ts  start.ts
scripts/win/: trust.ps1
src/: examplePlugin.ts  globals.d.ts  index.html  index.ts
src/api/: contextMenu.tsx  index.ts
src/plugins/: adBlock.ts  cleanLinks.ts  clickableCredits.ts  index.ts  index.tsx  noMusicVideos.tsx  skipExplicit.ts
src/utils/: types.ts
(+108 files in other folders)
