[workspace]
members = [
    "packages/native",
    "packages/android-notifier",
    "packages/oauth2aas",
    "packages/announcer",
]
resolver = "3"

[workspace.dependencies]
openssl = { version = "*", features = ["vendored"] }
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
gpapi = "6"
enum-iterator = "2"
